# airdrop-automator

./: INSTALLATION.md  README_APP.md  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: release.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: fix_types.sh  split_commands.py
src-tauri/src/: lib.rs  lib.rs.backup  main.rs  tray.rs
src-tauri/src/common/: capsolver.rs  http.rs  mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/auth/: commands.rs  types.rs
src-tauri/src/modules/depin/pharos/: commands.rs  mod.rs
src-tauri/src/modules/pharos/: types.rs
src-tauri/src/modules/proxy/: commands.rs  types.rs
src-tauri/src/modules/scripts/: mod.rs
src-tauri/src/modules/scripts/pharos/: api.rs  commands.rs  types.rs
src-tauri/src/modules/social/: commands.rs  mod.rs  types.rs
src-tauri/src/modules/system/: commands.rs  mod.rs  settings.rs  types.rs
src-tauri/src/modules/wallet/: commands.rs  mod.rs  types.rs  utils.rs
src/components/: AccountsLayout.tsx  DeleteConfirmDialog.tsx  EditWalletDialog.tsx  ImportPrivateKeyDialog.tsx  ImportWalletsDialog.tsx  Layout.tsx  RegistratorLayout.tsx
src/components/ui/: card.tsx  dialog.tsx
src/contexts/: AuthContext.tsx
src/i18n/: I18nContext.tsx  README.md  config.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/pages/: AccountsPage.tsx  AirdropProjectPage.tsx  DePINPage.tsx  EmailRegistratorPage.tsx  GalxePage.tsx  OtherRegistratorPage.tsx  PharosPage.tsx  ProxyPage.tsx  SchedulerPage.tsx  SettingsPage.tsx
src/pages/auth/: LoginPage.tsx  (+1 more)
(+5 files in other folders)
